--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,31 +1,51 @@
-Privacy Policy for Smart Calculator
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Privacy Policy - Smart Calculator</title>
+  <meta charset="UTF-8">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      line-height: 1.6;
+    }
+    h1 {
+      text-align: center;
+    }
+    h2 {
+      margin-top: 25px;
+    }
+  </style>
+</head>
+<body>
 
-Effective Date: 2026
+<h1>Privacy Policy</h1>
 
-Smart Calculator respects your privacy.
+<p><strong>Effective Date:</strong> 2026</p>
 
-1. Data Collection
+<p>Smart Calculator respects your privacy.</p>
 
-This app does NOT collect, store, or share any personal information.
+<h2>1. Data Collection</h2>
+<p>This app does NOT collect, store, or share any personal information.</p>
 
-2. Local Data Storage
+<h2>2. Local Data Storage</h2>
+<p>The app stores calculation history locally on your device only. 
+This data is not transmitted to any server and is not accessible by the developer.</p>
 
-The app stores calculation history locally on your device only.
-This data is not transmitted to any server and is not accessible by the developer.
+<h2>3. Internet Usage</h2>
+<p>This app does not require an internet connection and does not send any data online.</p>
 
-3. Internet Usage
+<h2>4. Third-Party Services</h2>
+<p>This app does not use any third-party analytics, ads, or tracking services.</p>
 
-This app does not require an internet connection and does not send any data online.
+<h2>5. Changes to This Policy</h2>
+<p>If changes are made, they will be updated on this page.</p>
 
-4. Third-Party Services
+<h2>Contact</h2>
+<p>If you have any questions, you can contact: 
+chzeeshanszforever099@gmail.com</p>
 
-This app does not use any third-party analytics, ads, or tracking services.
-
-5. Changes to This Policy
-
-If changes are made, they will be updated on this page.
-
-Contact
-
-If you have any questions, you can contact:
-chzeeshanszforever099@gmail.com
+</body>
+</html>
